# OpenENV-Hackathon

./: .gitignore  H100_JUPYTER_SETUP.md  README.md  __init__.py  _dashboard_state.json  client.py  demo.html  eval_compare.py  inference.ipynb  models.py  pyproject.toml  run_agent.py  run_agent_unsloth.py  train.ipynb  train_unsloth.ipynb  training_script.py  training_unsloth.py
my_env/: README.md  client.py  models.py  pyproject.toml
my_env/server/: app.py  my_env_environment.py
scripts/: register_kernel_312.sh
server/: __init__.py  app.py  hackathon_environment.py
server/rewards/: __init__.py  reward.py
server/rules/: __init__.py  engine.py
server/simulator/: __init__.py  latent_state.py  noise.py  output_generator.py  transition.py
server/tasks/: __init__.py  generator.py  scenarios.py
tests/: test_environment.py  test_literature_benchmark.py  test_models.py  test_rewards.py  test_rules.py  test_run_agent.py  test_simulator.py  test_training_script.py
training/: __init__.py  evaluation.py  gym_wrapper.py  literature_benchmark.py  rollout_collection.py  trajectory.py
